--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "vitest run",
+    "validate:spec": "node --input-type=module <<< \"import fs from 'fs'; import yaml from 'yaml'; yaml.parse(fs.readFileSync('src/openapi.yaml','utf8')); console.log('✅ OpenAPI spec valid');\""
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "swagger-ui-express": "^5.0.1",
+    "yaml": "^2.8.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.0",
+    "@types/supertest": "^7.2.0",
+    "@types/swagger-ui-express": "^4.1.8",
+    "supertest": "^7.2.2",
     "tsx": "^4.7.0",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "vitest": "^4.0.18"
   }
 }
